Game status and validMoves tests passed